--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kubevirt-typescript-api",
   "author": "suomiy",
   "description": "KubeVirtAPI Library with typescript type definitions for node.js and browser.",
-  "version": "0.18.1",
+  "version": "0.18.1-rc",
   "dependencies": {
     "@azure/ms-rest-js": "^1.1.0",
     "tslib": "^1.9.3"
